--- a/static/assets/sass/layouts/_blog-details.scss
+++ b/static/assets/sass/layouts/_blog-details.scss
@@ -1,3 +1,8 @@
+.blog-heading-area {
+  &.section-padding {
+    padding-top: 160px;
+  }
+}
 .blog-details-area {
   padding-bottom: 100px;
 }
@@ -33,7 +38,7 @@
 //sticky social link
 .sticky-social-menu {
   position: sticky;
-  top: 100px;
+  top: 130px;
 }
 //code block style
 .code-block-heading {
@@ -317,7 +322,7 @@
 **************************************************************** */
 @media only screen and (min-width: 100px) and (max-width: 768px) {
   .blog-heading-area {
-    padding-top: 100px;
+    padding-top: 160px;
     .blog-heading {
       h1 {
         font-size: 30px;
