--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -20,7 +20,8 @@
   <link rel="apple-touch-icon" sizes="144x144" href="/assets/images/products/bytebuilders/icons/apple-icon-144x144.png">
   <link rel="apple-touch-icon" sizes="152x152" href="/assets/images/products/bytebuilders/icons/apple-icon-152x152.png">
   <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/products/bytebuilders/icons/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192"  href="/assets/images/products/bytebuilders/icons/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="192x192"
+    href="/assets/images/products/bytebuilders/icons/android-icon-192x192.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/products/bytebuilders/icons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="/assets/images/products/bytebuilders/icons/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/products/bytebuilders/icons/favicon-16x16.png">
@@ -35,16 +36,18 @@
   <meta name="twitter:description" content="{{ $p.tagline | plainify }}">
   <!-- facebook -->
   {{ if .Resources.GetMatch "hero.jpg" }}
-    {{ $original := .Resources.GetMatch "hero.jpg" }}
-    {{ $cropped := $original.Fill "1300x650" }}
-    <meta name="twitter:image:src" content="{{ $cropped.Permalink }}"/>
-    <meta property="og:image" content="{{ $cropped.Permalink }}"/>
+  {{ $original := .Resources.GetMatch "hero.jpg" }}
+  {{ $cropped := $original.Fill "1300x650" }}
+  <meta name="twitter:image:src" content="{{ $cropped.Permalink }}" />
+  <meta property="og:image" content="{{ $cropped.Permalink }}" />
   {{ else }}
-    <meta name="twitter:image:src" content="{{ $.Site.BaseURL }}assets/images/products/bytebuilders/bytebuilders-1280x640.png"/>
-    <meta property="og:image" content="{{ $.Site.BaseURL }}assets/images/products/bytebuilders/bytebuilders-1280x640.png"/>
+  <meta name="twitter:image:src"
+    content="{{ $.Site.BaseURL }}assets/images/products/bytebuilders/bytebuilders-1280x640.png" />
+  <meta property="og:image"
+    content="{{ $.Site.BaseURL }}assets/images/products/bytebuilders/bytebuilders-1280x640.png" />
   {{ end }}
-  <meta property="og:title" content="{{ .Title }}"/>
-  <meta property="og:description" content="{{ $p.tagline | plainify }}"/>
+  <meta property="og:title" content="{{ .Title }}" />
+  <meta property="og:description" content="{{ $p.tagline | plainify }}" />
   <meta property="og:site_name" content="{{ $p.fullname }}">
   <meta property="og:type" content="article">
   <!-- font-awesome css  -->
@@ -74,6 +77,55 @@
     <!-- header-area top start -->
     {{ block "header-top" . }}
     <div class="header-top">
+      <!-- notification start  -->
+      <div onclick="goToWebinarPage()" class="notification-area notification is-primary" id="notification-area"
+        style="display:none">
+        <div class="container section">
+          <div class="notification-inner is-flex is-align-items-center is-justify-content-center">
+            <p>Join our upcoming webinar! Get your seat right now! <a href="https://appscode.com/webinar/"
+                target="_blank">Click</a> to
+              register.</p>
+          </div>
+        </div>
+        <button class="delete" onclick="event.stopPropagation(); closeItem('#notification-area')"></button>
+      </div>
+      <script type="text/javascript">
+        // close action start
+        function closeItem(item) {
+          const selcetedItem = document.querySelector(item)
+          selcetedItem.style.display = 'none'
+        }
+        // close action end
+
+        // redirect to webinar pagte
+        function goToWebinarPage() {
+          window.open("https://appscode.com/webinar/", "_blank");
+        }
+
+        (function () {
+          var xhr = window.XMLHttpRequest ? new XMLHttpRequest() : new ActiveXObject('Microsoft.XMLHTTP');
+          xhr.onreadystatechange = function () {
+            if (xhr.readyState === 4) {
+              if (xhr.status === 200) {
+                var result = JSON.parse(xhr.responseText);
+                if (result.schedules) {
+                  let endDate = new Date(result.schedules[0]).getTime();
+                  let startDate = new Date().getTime();
+                  let timeRemaining = parseInt((endDate - startDate) / 1000);
+                  if (timeRemaining >= 0) {
+                    document.querySelector('#notification-area div div p').innerHTML = "Upcoming Webinar: \""+result.title+"\". <a href=\"https://appscode.com/webinar\">Register here</a>!";
+                    document.querySelector('#notification-area').style.display = 'block';
+                  }
+                }
+              }
+            }
+          }
+          // console.log('GET', 'https://license-issuer.appscode.com/_/webinars/');
+          xhr.open('GET', 'https://license-issuer.appscode.com/_/webinars/');
+          xhr.send();
+        }());
+      </script>
+      <!-- notification end -->
       <div class="container">
         <nav class="navbar customize-navbar" role="navigation" aria-label="main navigation">
           <!-- navbar brand start -->
@@ -148,9 +200,11 @@
             </p>
           </div>
           <div class="cta-buttons buttons" data-aos="fade-up" data-aos-duration="600">
-              <a href="{{.Site.Params.domain_bytebuilders}}/user/sign_up" class="button is-primary is-large">Get started free</a>
-              <a href="{{.Site.Params.domain_appscode}}/meet-expert/" class="button is-large is-white-hoverable">Get a Demo</a>
-            </div>
+            <a href="{{.Site.Params.domain_bytebuilders}}/user/sign_up" class="button is-primary is-large">Get started
+              free</a>
+            <a href="{{.Site.Params.domain_appscode}}/meet-expert/" class="button is-large is-white-hoverable">Get a
+              Demo</a>
+          </div>
         </div>
         <div class="column is-4 is-offset-3">
           <div class="right-sidebar style-1">
@@ -161,7 +215,8 @@
               </div>
               <div class="single-sidebar-item" data-aos="fade-left" data-aos-duration="500">
                 <h5>Need Support SLA for AppsCode OSS projects?</h5>
-                <a href="{{.Site.Params.domain_appscode}}/pricing/" class="inline-button">Purchase our commercial support package</a>
+                <a href="{{.Site.Params.domain_appscode}}/pricing/" class="inline-button">Purchase our commercial
+                  support package</a>
               </div>
               <div class="single-sidebar-item" data-aos="fade-left" data-aos-duration="700">
                 <h5>Interested in Professional Services & Training?</h5>
@@ -187,74 +242,44 @@
             <div class="single-footer-widget">
               <div class="footer-logo">
                 <a href="{{.Site.Params.domain_appscode}}">
-                  <img
-                    src="{{$.Site.Data.products.appscode.logo.src}}"
-                    alt="{{$.Site.Data.products.appscode.logo.alt}}"
-                    class="img"
-                  />
+                  <img src="{{$.Site.Data.products.appscode.logo.src}}" alt="{{$.Site.Data.products.appscode.logo.alt}}"
+                    class="img" />
                 </a>
               </div>
               <!-- subscription area start  -->
               <div class="subscription-form">
-                  <form
-                    method="post"
-                    action="https://listmonk.appscode.com/subscription/form"
-                    id="mc-embedded-subscribe-form"
-                    name="mc-embedded-subscribe-form"
-                    class="navbar-form"
-                    target="_blank" rel="noopener"
-                    novalidate=""
-                    role="email"
-                  >
-                    <h4>Subscribe to Our Newsletter</h4>
-                    <p class="spam-message">
-                      No spam, we promise. Your mail address is secure
-                    </p>
-                    <div class="field has-addons">
-                      <div class="control">
-                        <input type="hidden" id="afbbc" name="l" value="afbbc974-e163-4467-be49-040e399520f3">
-                        <input
-                          class="input"
-                          name="email"
-                          id="mce-EMAIL"
-                          type="email"
-                          placeholder="Your work email address"
-                          required=""
-                        />
-                        <button
-                          id="mc-embedded-subscribe"
-                          type="submit"
-                          name="subscribe"
-                          class="subscription-button"
-                        >
-                          <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
-                        </button>
-                      </div>
+                <form method="post" action="https://listmonk.appscode.com/subscription/form"
+                  id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="navbar-form" target="_blank"
+                  rel="noopener" novalidate="" role="email">
+                  <h4>Subscribe to Our Newsletter</h4>
+                  <p class="spam-message">
+                    No spam, we promise. Your mail address is secure
+                  </p>
+                  <div class="field has-addons">
+                    <div class="control">
+                      <input type="hidden" id="afbbc" name="l" value="afbbc974-e163-4467-be49-040e399520f3">
+                      <input class="input" name="email" id="mce-EMAIL" type="email"
+                        placeholder="Your work email address" required="" />
+                      <button id="mc-embedded-subscribe" type="submit" name="subscribe" class="subscription-button">
+                        <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
+                      </button>
                     </div>
-                  </form>
-                </div>
+                  </div>
+                </form>
+              </div>
               <!-- subscription area end  -->
               <!-- contact info start  -->
               <div class="contact-information">
                 <h4>Have any Inquiry?</h4>
                 <ul class="all-contact-info">
                   <li>
-                    <a href="callto:{{.Site.Params.contact_phone}}"
-                        ><span
-                          ><i class="fa fa-phone" aria-hidden="true"></i></span
-                        >{{.Site.Params.contact_phone}}</a
-                      >
+                    <a href="callto:{{.Site.Params.contact_phone}}"><span><i class="fa fa-phone"
+                          aria-hidden="true"></i></span>{{.Site.Params.contact_phone}}</a>
                   </li>
 
                   <li>
-                    <a href="mailto:{{.Site.Params.contact_email}}"
-                        ><span
-                          ><i
-                            class="fa fa-envelope-o"
-                            aria-hidden="true"
-                          ></i></span
-                        >{{.Site.Params.contact_email}}</a
-                      >
+                    <a href="mailto:{{.Site.Params.contact_email}}"><span><i class="fa fa-envelope-o"
+                          aria-hidden="true"></i></span>{{.Site.Params.contact_email}}</a>
                   </li>
                 </ul>
               </div>
@@ -328,27 +353,21 @@
           </div>
           <div class="column is-4 has-text-centered-desktop has-text-left-touch">
             <div class="footer-inline-link">
-                <a href="{{.Site.Params.domain_appscode}}/legal/privacy-policy/">Privacy Policy</a>
-                <a href="{{.Site.Params.domain_appscode}}/legal/tos/">Terms of Service</a>
+              <a href="{{.Site.Params.domain_appscode}}/legal/privacy-policy/">Privacy Policy</a>
+              <a href="{{.Site.Params.domain_appscode}}/legal/tos/">Terms of Service</a>
             </div>
           </div>
           <div class="column is-4 has-text-right-desktop has-text-left-touch">
             <div class="social-link-inline">
               <ul>
                 <li>
-                  <a href="{{.Site.Params.twitter_url}}"
-                    ><i class="fa fa-twitter" aria-hidden="true"></i
-                  ></a>
+                  <a href="{{.Site.Params.twitter_url}}"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                 </li>
                 <li>
-                  <a href="{{.Site.Params.facebook_url}}"
-                    ><i class="fa fa-facebook" aria-hidden="true"></i
-                  ></a>
+                  <a href="{{.Site.Params.facebook_url}}"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                 </li>
                 <li>
-                  <a href="{{.Site.Params.youtube_url}}"
-                    ><i class="fa fa-youtube" aria-hidden="true"></i
-                  ></a>
+                  <a href="{{.Site.Params.youtube_url}}"><i class="fa fa-youtube" aria-hidden="true"></i></a>
                 </li>
               </ul>
             </div>
@@ -378,16 +397,19 @@
 
   <!--Start of Tawk.to Script-->
   <script type="text/javascript">
-  var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-  (function(){
-  var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-  s1.async=true;
-  s1.src='https://embed.tawk.to/5821e34b18d9f16af02864b7/default';
-  s1.charset='UTF-8';
-  s1.setAttribute('crossorigin','*');
-  s0.parentNode.insertBefore(s1,s0);
-  })();
+    var Tawk_API = Tawk_API || {},
+      Tawk_LoadStart = new Date();
+    (function () {
+      var s1 = document.createElement("script"),
+        s0 = document.getElementsByTagName("script")[0];
+      s1.async = true;
+      s1.src = 'https://embed.tawk.to/5821e34b18d9f16af02864b7/default';
+      s1.charset = 'UTF-8';
+      s1.setAttribute('crossorigin', '*');
+      s0.parentNode.insertBefore(s1, s0);
+    })();
   </script>
   <!--End of Tawk.to Script-->
 </body>
+
 </html>
