Add giscus comment support
Signed-off-by: Emruz Hossain <emruz@appscode.com>

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -92,4 +92,12 @@
 </section>
 <!-- blog details area end -->
 
+<!-- blog comments area start -->
+{{ if site.Params.comments.enable }}
+  <section class="comments-area">
+    {{ partial "comments.html" . }}
+  </section>
+{{ end }}
+<!-- blog comments area end -->
+
 {{ end }}
