--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -71,7 +71,10 @@
             </div>
             <div class="column is-6" data-aos="fade-left" data-aos-duration="1000">
               <!-- slider image start  -->
-              {{ $hero:= ($p.Resources.GetMatch "hero.jpg") | relURL | default "/assets/images/slider-image/s-3.png"}}
+              {{ $hero := "/assets/images/slider-image/s-3.png"}}
+              {{ with ($p.Resources.GetMatch "hero.jpg") }}
+                {{ $hero = .RelPermalink}}
+              {{ end }}
               <a href="{{ $p.RelPermalink }}" class="blog-slider-image" style="background-image: url({{$hero}});"></a>
               <!-- slider image end -->
             </div>
