--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -73,8 +73,7 @@
               <!-- slider image start  -->
               {{ $hero := "/assets/images/slider-image/s-3.png"}}
               {{ with ($p.Resources.GetMatch "hero.jpg") }}
-                {{ $resource := .Resize "612x" }}
-                {{ $hero = $resource.RelPermalink}}
+                {{ $hero = .RelPermalink}}
               {{ end }}
               <a href="{{ $p.RelPermalink }}" class="blog-slider-image" style="background-image: url({{$hero}});"></a>
               <!-- slider image end -->
