Remove pricing link
Signed-off-by: Tamal Saha <tamal@appscode.com>

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -215,7 +215,7 @@
               </div>
               <div class="single-sidebar-item" data-aos="fade-left" data-aos-duration="500">
                 <h5>Need Support SLA for AppsCode OSS projects?</h5>
-                <a href="{{.Site.Params.domain_appscode}}/pricing/" class="inline-button">Purchase our commercial
+                <a href="{{.Site.Params.domain_appscode}}/contact/" class="inline-button">Purchase our commercial
                   support package</a>
               </div>
               <div class="single-sidebar-item" data-aos="fade-left" data-aos-duration="700">
