--- a/static/assets/sass/base/_variables.scss
+++ b/static/assets/sass/base/_variables.scss
@@ -1,25 +1,25 @@
-// Define Font Family
-$font-heading: "Raleway", sans-serif;
-$font-paragraph: "Roboto", sans-serif;
-$font-link: "Roboto", sans-serif;
+// // Define Font Family
+// $ac-font-heading: "Raleway", sans-serif;
+// $ac-color-text: "Roboto", sans-serif;
+// $ac-color-link: "Roboto", sans-serif;
 
-// Define Font Size
-$font-small: 12px;
-$font-regular: 15px;
-$font-semi-regular: 16px;
-$font-large: 18px;
+// // Define Font Size
+// $font-small: 12px;
+// $font-regular: 15px;
+// $font-semi-regular: 16px;
+// $font-large: 18px;
 
-// Define Colour
-$primary-color: #0071bd;
-$heading-color: #2a2a2a;
-$paragraph-color: #4a4a4a;
-$list-color: #4a4a4a;
-$border-color: #e8e8e8;
-$border-dark-color: #bcbec0;
-$header-bg-color: #f1f1f1;
+// // Define Colour
+// $ac-primary: #0071bd;
+// $ac-color-heading: #2a2a2a;
+// $ac-color-text: #4a4a4a;
+// $ac-color-value: #4a4a4a;
+// $ac-white-light: #e8e8e8;
+// $border-dark-color: #bcbec0;
+// $header-bg-color: #f1f1f1;
 
-// Define Basic Colour
-$blue-color: #4d4dcb;
-$orange-color: #f99a00;
-$red-color: #b80c34;
-$white-color: #ffffff;
+// // Define Basic Colour
+// $blue-color: #4d4dcb;
+// $orange-color: #f99a00;
+// $red-color: #b80c34;
+// $ac-white: #ffffff;
