--- a/static/assets/sass/components/_go-to-top.scss
+++ b/static/assets/sass/components/_go-to-top.scss
@@ -11,7 +11,7 @@
   line-height: 30px;
   border-radius: 50%;
   color: #fff;
-  background: rgba($primary-color, 0.5);
+  background: rgba($ac-primary, 0.5);
   border: none;
   opacity: 0;
   cursor: pointer;
