--- a/static/assets/sass/components/_header.scss
+++ b/static/assets/sass/components/_header.scss
@@ -11,7 +11,7 @@ body.fixed-nav #header {
   margin-top: 0;
   z-index: 99;
   width: 100%;
-  background: $white-color;
+  background: $ac-white;
   box-shadow: 0px 3px 12px rgba(15, 61, 91, 0.08);
 }
 
@@ -35,7 +35,7 @@ body.fixed-nav #header {
     font-weight: 600;
     position: relative;
     z-index: 1;
-    font-family: $font-heading;
+    font-family: $ac-font-heading;
     transition: 0.3s ease-in-out;
     &:after,
     &:before {
@@ -45,7 +45,7 @@ body.fixed-nav #header {
       top: 0px;
       width: 100%;
       height: 0;
-      background: $primary-color;
+      background: $ac-primary;
       border-radius: 0px 0px 4px 4px;
       transition: 0.3s ease-in-out;
       z-index: -1;
@@ -71,7 +71,7 @@ body.fixed-nav #header {
     }
     &:hover {
       background-color: transparent;
-      color: $primary-color;
+      color: $ac-primary;
       &:after {
         height: 4px;
       }
