--- a/static/assets/sass/layouts/_blog-details.scss
+++ b/static/assets/sass/layouts/_blog-details.scss
@@ -29,10 +29,10 @@
   figcaption {
     max-width: 80%;
     margin: 0 auto;
-    color: $paragraph-color;
+    color: $ac-color-text;
     opacity: 0.8;
     padding: 10px 0;
-    border-bottom: 1px solid $border-color;
+    border-bottom: 1px solid $ac-white-light;
   }
 }
 //sticky social link
@@ -53,7 +53,7 @@
   .code-title {
     h4 {
       font-size: 16px;
-      font-family: $font-paragraph;
+      font-family: $ac-color-text;
       font-weight: 400;
       margin-bottom: 0;
     }
@@ -122,7 +122,7 @@
         bottom: 0;
         width: 0;
         height: 2px;
-        background: $primary-color;
+        background: $ac-primary;
         border-radius: 50px;
         transition: 0.3s ease-in-out;
       }
@@ -133,7 +133,7 @@
       }
     }
     img {
-      border: 1px solid $border-color;
+      border: 1px solid $ac-white-light;
       padding: 15px;
       border-radius: 8px;
     }
@@ -147,7 +147,7 @@
     line-height: 22px;
   }
   figure {
-    border: 1px solid $border-color;
+    border: 1px solid $ac-white-light;
     padding: 15px;
     margin-bottom: 15px;
     border-radius: 4px;
@@ -214,7 +214,7 @@
       top: 0;
       width: 4px;
       height: 100%;
-      background-color: $primary-color;
+      background-color: $ac-primary;
       border-radius: 2px;
     }
   }
@@ -263,7 +263,7 @@
     margin-bottom: 20px;
     td,
     th {
-      border: 1px solid $border-color;
+      border: 1px solid $ac-white-light;
       padding: 10px 20px;
     }
     th {
