--- a/static/assets/sass/main.scss
+++ b/static/assets/sass/main.scss
@@ -7,18 +7,22 @@
 @import "base/utilities/_default";
 @import "base/utilities/_themes";
 @import "base/utilities/_typography";
-
-//BASE - Base styles, variables, mixins
-// @import "base/_variables";
-// @import "base/_mixins";
 @import "base/_global";
 
+
+
+// mixins
+@import "mixins/_mixin";
+
+
 // COMPONENTS
-@import "components/_header";
+@import "components/_navbar";
+@import "components/_tabs";
+@import "components/_button";
 
 @import "components/_cta-area";
 @import "components/_footer";
-@import "components/_tabs-style";
+// @import "components/_tabs-style";
 @import "components/_go-to-top";
 
 //LAYOUTS - Page layout styles
