--- a/static/assets/sass/main.css
+++ b/static/assets/sass/main.css
@@ -8049,6 +8049,439 @@ strong {
   font-weight: 700;
 }
 
+/* ======================
+  Global CSS start
+========================*/
+.is-fullwidth {
+  width: 100% !important;
+}
+
+.yt-thumbnail {
+  position: relative;
+  z-index: 1;
+  border-radius: 4px;
+  overflow: hidden;
+}
+
+.yt-thumbnail img {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -o-object-fit: cover;
+     object-fit: cover;
+  height: 250px;
+  width: 400px;
+}
+
+.yt-thumbnail:hover .play-icon svg {
+  -webkit-transform: scale(1.3);
+          transform: scale(1.3);
+}
+
+.yt-thumbnail:after {
+  position: absolute;
+  content: "";
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000000;
+  opacity: 0.5;
+}
+
+.yt-thumbnail .play-icon {
+  position: absolute;
+  z-index: 99;
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.yt-thumbnail .play-icon svg {
+  width: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  cursor: pointer;
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+}
+
+.section-title {
+  margin-bottom: 2rem;
+  position: relative;
+  z-index: 8;
+}
+
+.section-title h1 {
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 130%;
+}
+
+.section-title h1.is-outlined-text {
+  color: #dbdbde;
+  -webkit-text-fill-color: white;
+  /* Will override color (regardless of order) */
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: #dbdbde;
+  position: absolute;
+  font-size: 107px;
+  top: 0;
+  z-index: -1;
+  opacity: 0.5;
+  text-align: center;
+  width: 100%;
+}
+
+.section-title h2 {
+  font-size: 32px;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
+.section-title p {
+  font-size: 16px;
+  line-height: 160%;
+  letter-spacing: -0.57px;
+  margin-bottom: 3rem;
+}
+
+.left-0 {
+  left: 0 !important;
+}
+
+.right-0 {
+  right: 0 !important;
+}
+
+.top-0 {
+  top: 0 !important;
+}
+
+.bottom-0 {
+  bottom: 0 !important;
+}
+
+.breadcrumb-section {
+  padding-top: 200px;
+}
+
+.cube {
+  position: absolute;
+  top: 80vh;
+  left: 45vw;
+  width: 10px;
+  height: 10px;
+  border: solid 1px #ffffff;
+  opacity: 0.5;
+  -webkit-transform-origin: top left;
+          transform-origin: top left;
+  -webkit-transform: scale(0) rotate(0deg) translate(-50%, -50%);
+          transform: scale(0) rotate(0deg) translate(-50%, -50%);
+  -webkit-animation: cube 12s ease-in forwards infinite;
+          animation: cube 12s ease-in forwards infinite;
+}
+
+.cube:nth-child(2n) {
+  border-color: white;
+}
+
+.cube:nth-child(2) {
+  -webkit-animation-delay: 2s;
+          animation-delay: 2s;
+  left: 5vw;
+  top: 30vh;
+}
+
+.cube:nth-child(3) {
+  -webkit-animation-delay: 4s;
+          animation-delay: 4s;
+  left: 95vw;
+  top: 50vh;
+}
+
+.cube:nth-child(4) {
+  -webkit-animation-delay: 6s;
+          animation-delay: 6s;
+  left: 90vw;
+  top: 30vh;
+}
+
+.cube:nth-child(5) {
+  -webkit-animation-delay: 8s;
+          animation-delay: 8s;
+  left: 10vw;
+  top: 75vh;
+}
+
+.cube:nth-child(6) {
+  -webkit-animation-delay: 10s;
+          animation-delay: 10s;
+  left: 50vw;
+  top: 20vh;
+}
+
+.circle {
+  position: absolute;
+  top: 20vh;
+  left: 35vw;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  border: solid 1px #ffffff;
+  opacity: 0.5;
+  -webkit-transform-origin: top left;
+          transform-origin: top left;
+  -webkit-transform: scale(0) rotate(0deg) translate(-50%, -50%);
+          transform: scale(0) rotate(0deg) translate(-50%, -50%);
+  -webkit-animation: cube 12s ease-in forwards infinite;
+          animation: cube 12s ease-in forwards infinite;
+}
+
+.circle:nth-child(2n) {
+  border-color: white;
+}
+
+.circle:nth-child(2) {
+  -webkit-animation-delay: 0.5s;
+          animation-delay: 0.5s;
+  left: 15vw;
+  top: 40vh;
+}
+
+.circle:nth-child(3) {
+  -webkit-animation-delay: 2s;
+          animation-delay: 2s;
+  left: 100vw;
+  top: 60vh;
+}
+
+.circle:nth-child(4) {
+  -webkit-animation-delay: 3s;
+          animation-delay: 3s;
+  left: 90vw;
+  top: 30vh;
+}
+
+.circle:nth-child(5) {
+  -webkit-animation-delay: 5s;
+          animation-delay: 5s;
+  left: 20vw;
+  top: 65vh;
+}
+
+.circle:nth-child(6) {
+  -webkit-animation-delay: 8s;
+          animation-delay: 8s;
+  left: 60vw;
+  top: 30vh;
+}
+
+@-webkit-keyframes cube {
+  from {
+    -webkit-transform: scale(0) rotate(0deg) translate(-50%, -50%);
+            transform: scale(0) rotate(0deg) translate(-50%, -50%);
+    opacity: 2s;
+    margin-top: 200px;
+  }
+  to {
+    -webkit-transform: scale(5) rotate(960deg) translate(-50%, -50%);
+            transform: scale(5) rotate(960deg) translate(-50%, -50%);
+    opacity: 0;
+    margin-top: 0;
+  }
+}
+
+@keyframes cube {
+  from {
+    -webkit-transform: scale(0) rotate(0deg) translate(-50%, -50%);
+            transform: scale(0) rotate(0deg) translate(-50%, -50%);
+    opacity: 2s;
+    margin-top: 200px;
+  }
+  to {
+    -webkit-transform: scale(5) rotate(960deg) translate(-50%, -50%);
+            transform: scale(5) rotate(960deg) translate(-50%, -50%);
+    opacity: 0;
+    margin-top: 0;
+  }
+}
+
+.sp-y-100 {
+  padding: 100px 0;
+}
+
+.sp-y-80 {
+  padding: 80px 0;
+}
+
+.sp-y-60 {
+  padding: 60px 0;
+}
+
+.sp-y-40 {
+  padding: 40px 0;
+}
+
+.sp-y-20 {
+  padding: 20px 0;
+}
+
+.sp-y-0 {
+  padding: 0px 0;
+}
+
+.br-1 {
+  border-right: 1px solid #dbdbde;
+}
+
+.bl-1 {
+  border-left: 1px solid #dbdbde;
+}
+
+.bt-1 {
+  border-top: 1px solid #dbdbde;
+}
+
+.bb-1 {
+  border-bottom: 1px solid #dbdbde;
+}
+
+.has-text-primary {
+  color: var(--ac-primary) !important;
+}
+
+::-moz-selection {
+  /* Code for Firefox */
+  color: #ffffff;
+  background: var(--ac-primary);
+}
+
+::selection {
+  color: #ffffff;
+  background: var(--ac-primary);
+}
+
+.d-table {
+  display: table;
+  height: 100%;
+  width: 100%;
+}
+
+.d-table-cell {
+  width: 100%;
+  display: table-cell;
+  vertical-align: middle;
+}
+
+/* brand logo area start */
+.single-brand-logo {
+  display: inline-block;
+  overflow: hidden;
+  margin: 10px 20px;
+  text-align: center;
+  vertical-align: middle;
+  max-width: 200px;
+  height: auto;
+}
+
+.single-brand-logo img {
+  max-height: 50px;
+}
+
+/* brand logo area end */
+.ac-custom-select .ss-single-selected,
+.ac-custom-select .ss-multi-selected {
+  min-height: 45px !important;
+  border: 1px solid #a6abbd;
+  color: #3b3030;
+  padding: 0 15px;
+}
+
+.ac-custom-select .ss-single-selected .ss-arrow,
+.ac-custom-select .ss-multi-selected .ss-arrow {
+  margin: 0;
+}
+
+.ac-custom-select .ss-single-selected .placeholder,
+.ac-custom-select .ss-multi-selected .placeholder {
+  font-size: 15px;
+  color: #3b3030;
+  font-weight: 500;
+}
+
+.ac-custom-select .ss-single-selected .ss-values,
+.ac-custom-select .ss-multi-selected .ss-values {
+  margin-top: 3px;
+}
+
+.ac-custom-select .ss-single-selected .ss-values .ss-disabled,
+.ac-custom-select .ss-multi-selected .ss-values .ss-disabled {
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 16px;
+  color: #a6abbd;
+}
+
+.ac-custom-select .ss-single-selected .ss-values .ss-value,
+.ac-custom-select .ss-multi-selected .ss-values .ss-value {
+  height: 30px;
+  margin-bottom: 6px;
+  padding: 0 10px;
+  background-color: #35a651;
+}
+
+.ac-custom-select .ss-single-selected .ss-add,
+.ac-custom-select .ss-multi-selected .ss-add {
+  margin: 4px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.ac-custom-select .ss-content {
+  border: 1px solid #a6abbd;
+}
+
+.ac-custom-select .ss-content .ss-list .ss-option {
+  font-size: 14px;
+  color: #3b3030;
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+}
+
+.ac-custom-select .ss-content .ss-list .ss-option:hover {
+  opacity: 0.8;
+  color: var(--ac-primary);
+}
+
+.ac-custom-select .ss-content .ss-list .ss-option.ss-disabled {
+  opacity: 0.5;
+}
+
+.ac-custom-select .ss-content .ss-search input {
+  border: 1px solid #a6abbd;
+}
+
+.ac-custom-select .ss-content .ss-search input:focus {
+  outline: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
 .social-link-vertical ul li,
 .social-link-horizontal ul li {
   display: block;
@@ -8114,6 +8547,96 @@ strong {
 .social-link-horizontal ul li a:hover i.fa-share-alt {
   -webkit-animation: none;
           animation: none;
+}
+
+/****************************************
+Responsive Classes
+*****************************************/
+@media (max-width: 768px) {
+  .is-flex-direction-row-reverse-mobile {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .container {
+    padding: 0 15px;
+  }
+  .section-title {
+    font-size: 28px;
+    margin-bottom: 1rem;
+  }
+  .section-title h2 {
+    font-size: 28px;
+    margin-bottom: 0;
+  }
+  .section-title h1 {
+    font-size: 28px;
+  }
+  .section-title h1.is-outlined-text {
+    font-size: 60px;
+  }
+  .section-title p {
+    margin-bottom: 0;
+  }
+}
+
+@media (min-width: 769px) and (max-width: 1023.98px) {
+  .container {
+    padding: 0 30px;
+  }
+  .section-title h1.is-outlined-text {
+    font-size: 70px;
+  }
+  .section-title p {
+    margin-bottom: 0;
+  }
+  .is-flex-direction-row-reverse-tablet {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+@media (min-width: 1024px) and (max-width: 1215px) {
+  .container {
+    padding: 0 30px;
+  }
+  .section-title h1.is-outlined-text {
+    font-size: 80px;
+  }
+  .cube {
+    -webkit-animation: none;
+            animation: none;
+  }
+}
+
+@media (min-width: 1216px) and (max-width: 1407px) {
+  .section-title h1.is-outlined-text {
+    font-size: 80px;
+  }
+}
+
+@media (min-width: 1408px) and (max-width: 1600px) {
+  .section-title h1.is-outlined-text {
+    font-size: 80px;
+  }
+  .container {
+    max-width: 1100px !important;
+  }
+}
+
+@media (min-width: 1600px) {
+  .section-title h1.is-outlined-text {
+    font-size: 80px;
+  }
 }
 
 .navbar-area {
