--- a/static/assets/sass/main.scss
+++ b/static/assets/sass/main.scss
@@ -7,7 +7,7 @@
 @import "base/utilities/_default";
 @import "base/utilities/_themes";
 @import "base/utilities/_typography";
-@import "base/_global";
+@import "base/utilities/global";
 
 
 
